Use AreaEdge instead of separate Vertex